--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 
   console.log("🔥 Firestore conectado");
 </script>
+<!-- Firebase core -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<!-- Firebase Firestore -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+<!-- Tu archivo JS -->
+<script src="ferreteria-online-f0975.js"></script> <!-- Cambia 'tu-archivo.js' por el nombre real -->
 
 </body>
 </html>
