--- a/index.html
+++ b/index.html
@@ -2,62 +2,67 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario de Contacto</title>
+  <title>Ferretería Online</title>
 </head>
 <body>
   <h1>Contacto</h1>
 
-  <!-- Formulario -->
   <form id="formularioContacto">
-    <label for="nombre">Nombre:</label><br>
+    <label>Nombre:</label><br>
     <input type="text" id="nombre" required><br><br>
 
-    <label for="email">Email:</label><br>
+    <label>Email:</label><br>
     <input type="email" id="email" required><br><br>
 
-    <label for="mensaje">Mensaje:</label><br>
+    <label>Mensaje:</label><br>
     <textarea id="mensaje" required></textarea><br><br>
 
     <button type="submit">Enviar</button>
   </form>
 
-  <!-- Firebase scripts -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-  <!-- Código JavaScript -->
-  <script>
-    // Tu configuración de Firebase
     const firebaseConfig = {
-      apiKey: "AIzaSyB7s7CD0msZTKYQ0hofwj34A18FUSzkq2k",
+      apiKey: "AIzaSyB7s7CDOmSZTKYQehofwj34A18FUSzkq2k",
       authDomain: "ferreteria-online-f0975.firebaseapp.com",
       projectId: "ferreteria-online-f0975",
-      storageBucket: "ferreteria-online-f0975.firebasestorage.app",
+      storageBucket: "ferreteria-online-f0975.appspot.com",
       messagingSenderId: "442919643384",
-      appId: "1:442919643384:web:16b3a3f58b7fb85513330d",
-      measurementId: "G-J9F8KSTMZQ"
+      appId: "1:442919643384:web:16b3a3f58b7fb85513330d"
     };
 
-    // Inicializar Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    // ALERTA para probar que se conectó
-    alert("🔥 Firestore conectado correctamente");
+    // Función async para probar conexión
+    async function pruebaFirestore() {
+      try {
+        await addDoc(collection(db, "prueba"), { mensaje: "Hola desde Ferretería Online" });
+        alert("🔥 Firestore conectado correctamente");
+      } catch (error) {
+        alert("❌ Error conectando Firestore: " + error);
+      }
+    }
 
-    // Guardar mensajes del formulario
+    pruebaFirestore();
+
+    // Guardar formulario
     const formulario = document.getElementById('formularioContacto');
-    formulario.addEventListener('submit', (e) => {
+    formulario.addEventListener('submit', async (e) => {
       e.preventDefault();
-      db.collection("contactos").add({
-        nombre: document.getElementById('nombre').value,
-        email: document.getElementById('email').value,
-        mensaje: document.getElementById('mensaje').value,
-        fecha: new Date()
-      })
-      .then(() => alert("Mensaje enviado!"))
-      .catch(err => alert("Error: " + err));
+      try {
+        await addDoc(collection(db, "contactos"), {
+          nombre: document.getElementById('nombre').value,
+          email: document.getElementById('email').value,
+          mensaje: document.getElementById('mensaje').value,
+          fecha: new Date()
+        });
+        alert("Mensaje enviado!");
+      } catch (err) {
+        alert("Error: " + err);
+      }
     });
   </script>
 </body>
